# quad_sim

./: README.md
model/: quadrotor.ttt
model/solidwork model/: arm - BLACK.STL  arm - WHITE.STL  arm -RED.STL  board1.STL  board_top.STL  motor.STL
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  communicate_test.cpp
src/controller/: CMakeLists.txt  quad_controller.cpp  quad_controller.h  quad_states.cpp  quad_states.h
src/vrep_sim/: CMakeLists.txt
